
2012-03-13:
~~~~~~~~~~

Fixed bug in H5CmpFile.py which produced incorrect reference contif
numbers.


2012-02-14:
~~~~~~~~~~

run_pac uses python 2.7 if running SMRTanalysis 1.3.0.

New interface to H5CmpFile.py: Separate file and movie objects.

New script to print alignment strings from cmp file: PacBio_ShowAlignments.py

New script to print alignment details from cmp file: PacBio_CmpDetails.py

Optionally output data in fastq format from PacBio_BasFilteredSubreads.py


2012-02-01:
~~~~~~~~~~

New script PacBio_FullInsert.py plots histogram of sizes of full
molecule sub-reads only, excluding partial sub-reads at start and end
of read.

New script PacBio_Qual.py prints detailed basecall quality scores for
one ZMW.

PacBio_BasFilteredSubreads.py now has option to output sequence and
quality data from bas.h5 file, using the QualityValue field,
ascii-encoded as Q+33.

PacBio_FindAdapt.py now plots HQ regions and adapters in colour.

In PacBio_BasSummary.py, add a 'avg' column which shows average
subread length (i.e., bases/subreads).

Also in PacBio_BasSummary.py, on the 'Aligned' line, the total bases
column reports all aligned bases, but the max column now reports the
length of the single longest alignment.

Fixed exception in PacBio_Bas.py when the subread contains no errors.